<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".util.MainActivity"
   android:paddingTop="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal">
        <CheckBox
            android:checked="false"
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="20dp"
            android:text="@string/button_find_songs" />

        <Button
            android:id="@+id/stopPlay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_stop" />
    </LinearLayout>

    <Spinner
        android:layout_marginHorizontal="10dp"
        android:id="@+id/spinner_songs"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#D8DAE1"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/delete_song"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/button_delete_song"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_confirm" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/myRecyclerview"
           android:layout_marginRight="10dp"
           android:layout_marginLeft="10dp"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
           >

       </androidx.recyclerview.widget.RecyclerView>


        <Button
            android:id="@+id/add_ring"
            android:layout_width="117dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/button_add_ring"
            android:layout_marginBottom="50dp"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">




    </LinearLayout>
</LinearLayout>