<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".util.Add_ringActivity"
    android:orientation="vertical"
android:paddingTop="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/button_add_ring" />


    <TimePicker
        android:id="@+id/TimePicker"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="20dp"
        android:timePickerMode="spinner" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:layout_marginRight="50dp"
            android:text="@string/button_backtomain"
            android:id="@+id/Back_to_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/save_ring"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_save_ring"
            />
    </LinearLayout>

    <Switch
        android:id="@+id/switch_viberate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="30dp"
        android:text="@string/switch_viberate"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="30dp"
            android:text="重复"
            android:gravity="center_vertical"/>

        <TextView
            android:gravity="center"
            android:id="@+id/textview_custom"
            android:layout_width="173dp"
            android:layout_height="match_parent" />
        <Spinner
            android:spinnerMode="dropdown"
            android:textSize="20dp"
            android:textStyle="bold"

            android:id="@+id/Spinner_repeated"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>